--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,9 +1,7 @@
+* { margin:0; padding:0; box-sizing:border-box; }
 body {
-background-color: #fff5ee;
-
-
+	background-color: #fff5ee;
 }
 p, h1 {
-
-	color: #708090;
+	color: rgba(0,0,0,.54);
 }
