--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,4 +1,4 @@
-body {color:#28333C;}
+body {background-color:#28333C;}
 
 h1{color:#7F0000;}
-slogan{font-style: italic;
+#slogan{font-style: italic;}
