--- a/unit_4/css/style1.css
+++ b/unit_4/css/style1.css
@@ -1,22 +1,23 @@
-@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,800);
 * { margin:0; padding:0; box-sizing:border-box; }
 body {
 	background-color:#191919;
-	font-family: 'Work Sans', sans-serif;
+	font-family: "proxima-nova",sans-serif;
 	font-style: normal;
 }
 h1{
 	color:#fff;
-	font-weight: 800;
+	font-weight: 900;
 	text-transform: uppercase;
 }
 #tagline{
-	font-weight: 400;
+	font-weight: 600;
 	color: #fff;
 	
 	}
 h3 {
-	font-weight: 400;
+	font-family: "proxima-nova-condensed",sans-serif;
+	font-style: normal;
+	font-weight: 500;
 	text-transform: uppercase;
 	color: #d7dbdf;
 	}
@@ -25,8 +26,9 @@ div#logo {
 	padding: 20% 10%;
 	}
 nav {
-	
-	font-weight: 400;
+	font-family: "proxima-nova-condensed",sans-serif;
+	font-style: normal;
+	font-weight: 500;
 	text-transform: uppercase;
 	}
 nav a {
