--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -2,7 +2,6 @@
 /*@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:700);*/
 * { margin:0; padding:0; box-sizing:border-box;}
 body {
-	/*background: #2a343a;*/
 	background-color: #30393f; 
 	background-image: repeating-linear-gradient(-45deg, rgba(0,0,0,0), rgba(0,0,0,0.8) 1px, transparent 1px, transparent 6px);
 	background-size: 8px 8px;
@@ -20,25 +19,13 @@ header > div {
 }
 header div:nth-of-type(1){
 	width: 33.333%;
-	/*background: url(../images/mapa_africa.svg) no-repeat ;
-	background-size: 44%;
-	background-position: 90% 90%;*/
 	overflow: hidden;
-/*	height: 190px;
-*/}
+}
 header div:nth-of-type(2){
 	width: 66.666%;
 	background: url(../images/IMG_7274_slate.jpg) no-repeat right top;
 	background-size: cover;
 }
-/*header > div {
-	background: url(../images/mapa_africa.svg) no-repeat ;
-	background-size: 44%;
-	background-position: 90% 90%;
-	width: 33%;
-	height: 190px;
-}*/
-
 nav, h3, h1{
 	font-weight: 800;
 }
@@ -73,8 +60,7 @@ section {
 }
 h1{
 	font-size: 3em;
-	color: rgba(195,229,243,.9); 
-	color: rgba(120,140,150,.85);
+	color: rgba(133,160,176,.85);
 	letter-spacing: .05em;
 	text-transform: uppercase;
 	text-align: center;
@@ -101,13 +87,49 @@ main > p {
 	font-style: italic;
 	color: #A4A5AD; 
 	}
-/*#logo {
-	max-width: 15.5em;
-	padding: 1.25em;
-	opacity: .95;
-}*/
+footer{
+	background-color: rgba(0,0,0,.5);
+	color: #D0E1E8;
+	position: relative;
+	margin-top: 3em;
+}
+footer a {
+	color: #D0E1E8;
+}
+footer h3 {
+	clear: both;
+	float: left;
+	color: rgba(255,255,255,.85);
+	font-size: 1.4em;
+	padding-left: 2em;
+}
+footer > nav {
+	float: left;
+	font-size: 1.4em;
+	margin-bottom: 1em;
+	padding: .5em 1.75em;
+}
+footer > nav a {
+	letter-spacing: 0;
+	color: #91B7C4;
+	margin-left: 0;
+	border-bottom: solid .2em #91B7C4;
+	}
+footer > nav a:hover {
+	background-color: transparent;
+	color: #fff;
+	border-bottom-color: #fff; 
+}
+footer div:nth-of-type(1), footer div:nth-of-type(2) {
+	float: left;
+	margin: 0 0 2em 1.5em;
+	font-size: .8em;
+}
+address {
+	font-style: normal;
+}
 #logo {
-	width: 12.5em;
+	max-width: 12.5em;
 	position: absolute;
 	top: 1.25em;
 	left: 1.25em;
@@ -118,10 +140,6 @@ main > p {
 	float: right;
 	margin-right: 4em;
 }
-/*#header_img {              
-	float: right;
-	width: 66%;
-}*/
 #areas {
 	width: 80%;
     margin:0 auto;
@@ -134,15 +152,12 @@ main > p {
 	display: block;
 	line-height: 0;
 	border-bottom: solid 1.25em #A3001A;
-
 }
 #intro {
 	padding: 0;
 	width: 65%;
 	margin: 1em auto;
-	/*border-bottom: solid 1.2em #000;*/
 	background-color: rgba(0,0,0,.5);
-
 	}
 #intro > header{
 	float: left;
@@ -164,58 +179,25 @@ main > p {
 	width: 50%;
 	margin: 0;
 	padding-left: 1em;
-	
 	}
 #intro p {
 	color: #191919;
 	font-size: .9em;
 	line-height: 1.4em;
 }
-footer{
-	background-color: rgba(0,0,0,.5);
-	color: #D0E1E8;
-	/*padding: 0 1.5em 1.5em 1.5em;*/
-	position: relative;
-	margin-top: 3em;
+.icons {
+	float: right;
+	padding-right:2em;
 }
-footer a {
-	color: #D0E1E8;
+.icons a img{
+	opacity: .85;
 }
-footer h3 {
-	clear: both;
-	float: left;
-	color: rgba(255,255,255,.85);
-	font-size: 1.4em;
-	padding-left: 2em;
+.icons a:nth-child(1) img{
+	height: 25px;
 }
-footer > nav {
-	float: left;
-	font-size: 1.4em;
-	margin-bottom: 1em;
-	padding-top: .5em;
-	padding-left: 1.75em;
-}
-footer > nav a {
-	letter-spacing: 0;
-	color: #91B7C4;
-	margin-left: 0;
-	border-bottom: solid .2em #91B7C4;
-	}
-footer > nav a:hover {
-	background-color: transparent;
-	color: #fff;
-	/*padding-left: 0;*/
-	/*padding-right: 0;*/
-	/*margin-right: .5em;*/
-	border-bottom-color: #fff; 
-}
-footer div {
-	float: left;
-	margin: 0 1em 2em 1em;
-	font-size: .8em;
-}
-address {
-	font-style: normal;
+.icons a:nth-child(2) img{
+	height: 23px;
+	padding-left: 12px;
 }
 #legal {
 	font-size: .75em;
@@ -235,11 +217,11 @@ address {
 	height: 0;
 }
 @media only screen and (min-width: 1600px){
-	#intro {
-		width: 1200px;
-	}
 	header > div {
 		background-position: 50% -120%;
+	}
+	#intro {
+		width: 1200px;
 	}
 }
 @media only screen and (max-width: 1300px) {
@@ -247,8 +229,9 @@ address {
 		background-position: 50% -120%;
 	}
 	#intro div div {
-	float: none;
-	width: 100%;
+		float: none;
+		width: 100%;
+		padding-bottom: 0;
 	}
 	#intro header {
 		width: 30%;
@@ -259,41 +242,40 @@ address {
 	#intro div br {
 		/*display: none;*/
 	}
-	#intro div > div {
-		padding-bottom: 0;
-	}
 }
 @media only screen and (max-width: 1210px) {
 	body > header {
-		height: 10.25em;
-		height: auto;
+		height: 10em;
+		/*height: auto;*/
+	}
+	header > div {
+		background-position: 40% 70%;
+	}
+	nav {
+		font-size: 1.15em;
 	}
 	h1 {
 		font-size: 2.5em;
 	}
-	nav {
-		font-size: 1.15em;
+	footer nav {
+		font-size: 1.1em;
 	}
 	#intro h2 {
 		font-size: 1.2em;
 		margin-right: .25em;
 	}
 	#logo {
-	width: 11em;
+		/*width: 11em;*/
 	}
 	#map {
 		margin-top: -1.5em;
 	}
-	header > div {
-		background-position: 40% 70%;
-	}
-	
-	footer nav {
-		font-size: 1.1em;
-	}
 }
 @media only screen and (max-width: 1000px) {
-	header nav a{
+	header nav {
+		height: 8.5em;
+}
+	header nav a {
 		display: block;
 		text-align: right;
 	}
@@ -301,13 +283,16 @@ address {
 		border-top:none;
 	}
 	h1 {
-		font-size: 2.3em;
-		max-width: 90%;
+		font-size: 2.25em;
+		max-width: 97%;
 		margin: 0 auto;
 	}
+	footer nav {
+		font-size: 1em;
+	}
 	#map {
-	margin-top: -1.5em;
-	margin-right: 2.5em;
+		margin-top: -1.5em;
+		margin-right: 2.5em;
 	}
 	#intro, #areas {
 		width: 90%;
@@ -315,10 +300,7 @@ address {
 	#intro h2 {
 		/*font-size: 1em;*/
 	}
-	footer nav {
-		font-size: 1em;
-
-	}
+	
 }
 @media only screen and (max-width: 768px) {
 	h1 {
@@ -336,6 +318,12 @@ address {
 	footer h3 {
 		font-size:1em;
 	}
+	header div:nth-of-type(1){
+	width: 40%;
+}
+header div:nth-of-type(2){
+	width: 60%;
+}
 	#map {
 		width:10em;
 		margin-top: -.5em;
@@ -364,7 +352,7 @@ address {
 		padding:.8em;
 	}
 }
-@media only screen and (max-width: 567px) {
+@media only screen and (max-width: 572px) {
 	body {
 		font-size: 14px;
 	}
@@ -375,17 +363,15 @@ address {
 		width: 80%;
 	}
 	#areas img {
-	width: 48%;
-	margin: 1%;
+		width: 48%;
+		margin: 1%;
 	}
-	/*#intro {
-		width: 70%;
-	}*/
+	
 }
 @media only screen and (max-width: 500px){
-	body > header{
-	background-color: rgba(0,0,0,.25);
-	box-shadow: none;
+	body > header {
+		background-color: rgba(0,0,0,.25);
+		box-shadow: none;
 	}
 	body > nav {
 		padding-top: 1.3em;
@@ -403,28 +389,34 @@ address {
 	main > p {
 		font-size: 1.1em;
 	}
-	header div:nth-of-type(1){
-		/*display:none;*/
+	header div:nth-of-type(1) {
 		width:50%;
 	}
-	header div:nth-of-type(2){
-	/*width: 100%;*/
-	width: 50%;
-	background:none;
-	}
-	footer nav {
-		display:none;
+	header div:nth-of-type(2) {
+		width: 50%;
+		background:none;
 	}
 	footer {
 		padding-top: 1em;
 	}
-	
-
-}
-@media only screen and (max-width: 450px){
-	#logo{
-		width: 9em;
+	footer nav {
+		display: none;
 	}
+	.icons a img {
+		display: block;
+		
+	}
+	.icons a:nth-child(1) img{
+		height: 23px;
+		padding-left: 0px;
+		margin-bottom: 8px;
+	}
+	.icons a:nth-child(2) img{
+		height: 20px;
+		padding-left: 3px;
+	}
+}
+@media only screen and (max-width: 460px){
 	header nav {
 		height: 8em;
 	}
@@ -439,9 +431,41 @@ address {
 	footer h3 {
 		float: none;
 		padding: 5% 0 2% 10%;
+		/*display: inline-block;*/
 	}
-	footer div {
+	footer div:nth-of-type(1) {
 		padding-left: 10%;
 		margin: 0% 0 5% 0;
+	}
+	footer div:nth-of-type(2) {
+		padding-left: 5%;
+		margin: 0% 0 5% 0;
+	}
+	footer div:nth-of-type(3) {
+		padding-left: 5%;
+		margin: 0% 0 5% 0;
+		/*clear: left;*/
+	}
+	#logo{
+		width: 9em;
+	}
+	
+	.icons a:nth-child(1) img{
+		/*margin-bottom: 0px;*/
+	    margin-bottom: 8px;
+	}
+	.icons a:nth-child(2) img{
+		
+	}
+}
+@media only screen and (max-width: 378px){
+	.icons {
+		clear: both;
+		float: none;
+		text-align: center;
+	}
+	.icons a:nth-child(1) img, .icons a:nth-child(2) img  {
+		display: inline;
+		margin: 0 .5em 0 .5em;
 	}
 }
