--- a/ColmarAcademy/resources/css/style.css
+++ b/ColmarAcademy/resources/css/style.css
@@ -25,7 +25,7 @@ h4 {
 nav ul li {
 	display: inline-block;
 }
-header div:first-child {
+header > div:first-child {
 	height: 64px;
 	background-color: #fff;
 	display: flex;
@@ -41,7 +41,7 @@ header div:first-child {
 .banner img {
 	width:60%
 }
-.banner > div {
+.banner > div:nth-child(2) {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -65,12 +65,39 @@ div.button {
 	padding: 8px;
 	text-align: center;
 }
-#intro div:nth-child(2) {
-	border-left: 1px solid #777;
+#intro {
+	display: flex;
 }
-#callout_column div:last-child {
-	background-color: #ebebeb;
+#intro > div:first-child {
+	width: 58%;
+	padding: 1.7em 1.3em;
+}
+#intro > div:first-child img {
+	width: 100%;
+}
+#callout_column {
+	width:423px;
+	border-left: 1px solid #777;
+	display: flex;
+	flex-direction: column;
+	padding-top: .6em;
+}
+#callout_column img {
+	width: 38%;
+	margin: 1.125em;
+}
+#callout_column > div:last-child {
+	background-color: #dadfe3;
 } 
+.horz_callout {
+	display: flex;
+}
+.horz_callout div {
+
+}
+/*.horz_callout h4, .horz_callout p {
+	width: 65%;
+}*/
 .courses {
 	text-transform: uppercase;
 }
