--- a/ColmarAcademy/resources/css/style.css
+++ b/ColmarAcademy/resources/css/style.css
@@ -4,23 +4,34 @@ html {
 body {
 	margin:0;
 	font-size: 18px;
-	font-family: Arial, sans-serif;
-	color: #8e8e8e;
+	font-family: 'Muli', Arial, sans-serif;
+	font-weight: 400;
+	color: #7e858f;
+}
+p, h1, h2, h3, h4 {
+	padding: 0;
+	margin: 0;
 }
 h1, h2, h3, h4 {
 	color: #373642;
+	font-weight: 800;
+
 }
 h1 {
 	font-size: 2.5em;
+	padding: .5em 0;
+	line-height:1em;
 }
 h2 {
 	font-size: 2.25em;
+	padding: .6em 0;
 }
 h3 {
 	font-size: 1.35em;
 }
 h4 {
-	font-size: 1.5em;
+	font-size: 1.25em;
+	padding: 1em 0 .5em;
 }
 nav ul li {
 	display: inline-block;
@@ -36,17 +47,18 @@ header > div:first-child {
 .banner {
 	display: flex;
 	background-color: #dadfe3;
-	padding: 1.7em 1.3em;
-}
-.banner img {
-	width:60%
+	
 }
 .banner > div:nth-child(2) {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		margin-left:40px;
-		width: 30%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-left:40px;
+	width: 30%;
+}
+#logo {
+	display: flex;
+	align-items: center;
 }
 #logo span {
 	text-transform: uppercase;
@@ -64,52 +76,104 @@ div.button {
 	color: white;
 	padding: 8px;
 	text-align: center;
+	margin-top: 2em;
 }
 #intro {
 	display: flex;
 }
-#intro > div:first-child {
-	width: 58%;
+.left {
+	width:60%;
 	padding: 1.7em 1.3em;
 }
-#intro > div:first-child img {
+.left img, .left video {
 	width: 100%;
 }
-#callout_column {
-	width:423px;
+.caption {
+	display: block;
+	font-size: .75em;
+	margin-top: 3em;
+}
+#intro .callout_column {
+	width:560px;
 	border-left: 1px solid #777;
 	display: flex;
 	flex-direction: column;
 	padding-top: .6em;
 }
-#callout_column img {
-	width: 38%;
-	margin: 1.125em;
-}
-#callout_column > div:last-child {
+#intro .callout_column > div:last-child, #thesis_exhibit .callout_column > div:first-child { 
 	background-color: #dadfe3;
 } 
+.callout_column img {
+	width: 35%;
+	margin: 1.125em;
+}
+.horz_callout img + div {
+	 width: 65%;
+	 margin: 1.125em;
+}
 .horz_callout {
 	display: flex;
 }
-.horz_callout div {
-
+.read_more {
+	display: block;
+	margin-top: .5em;
+	color: #66acf0;
 }
-/*.horz_callout h4, .horz_callout p {
-	width: 65%;
-}*/
 .courses {
 	text-transform: uppercase;
+	display: block;
+	padding: 8px 0;
 }
 #start_learning {
-	background-color: #bebebe;
+	background-color: #dadfe3;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1em 0 3em 0;
+}
+#start_learning h2, #thesis_exhibit h2 {
+	text-align: center;
+}
+#start_learning > div {
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 1260px;
+}
+.vert_callout {
+	flex-basis: 30%;
+	display: flex;
+	flex-direction: column;
+	margin: 16px;
+	/*height:220px;*/
+	background-color: #fff;
+}
+.vert_callout img {
+	width: 100%;
+}
+.vert_callout > div {
+	padding: .75em;
+}
+#thesis_exhibit > div:first-of-type {
+	display: flex;
+}
+#thesis_exhibit .callout_column {
+	width:560px;
+	display: flex;
+	flex-direction: column;
+	padding-top: 1.7em;
 }
 footer {
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
-	padding: 24px;
+	padding: 1em 1.33em 3em 1.33em;
+	border-top:1px solid #dedede;
+}
+footer span, footer ul {
+	font-size: .8em;
+	margin: 0;
 }
 footer ul li {
 	display: inline-block;
+	padding: 0 .5em;
 }
